# ffmpeg_ndk_build

./: .gitignore  README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/sh/: build_ffmpeg.sh  build_x264.sh  build_x265.sh
app/sh/build_ffmpeg/android/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/sh/build_ffmpeg/android/armeabi-v7a/include/libavutil/: ffversion.h
app/sh/build_ffmpeg/android/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavutil.pc  (+4 more)
app/sh/build_x265/build_dir/arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  x265.pc
app/sh/build_x265/build_dir/arm64-v8a/cmake/: cmake_uninstall.cmake
app/sh/build_x265/build_dir/arm64-v8a/common/: Makefile  cmake_install.cmake
app/sh/build_x265/build_dir/arm64-v8a/encoder/: Makefile  cmake_install.cmake
app/sh/build_x265/build_dir/armeabi-v7a/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  x265.def  x265.pc
app/sh/build_x265/build_dir/armeabi-v7a/cmake/: cmake_uninstall.cmake
app/sh/build_x265/build_dir/armeabi-v7a/common/: Makefile  cmake_install.cmake
app/sh/build_x265/build_dir/armeabi-v7a/encoder/: Makefile  cmake_install.cmake
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
